# flowweave-lite

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  task_template.py
flowweave/: __init__.py  base.py  cli.py  flowweave.py  message.py
flowweave/schema/: flow.json  op_code.json
